[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/interface/menu/DifficultyPopup.gd" type="Script" id=1]
[ext_resource path="res://graphics/interface/menu/screen_texture.png" type="Texture" id=2]
[ext_resource path="res://source/interface/menu/MainMenu_Button.tscn" type="PackedScene" id=3]

[node name="DifficultyPopup" type="Popup"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
script = ExtResource( 1 )
_sections_unfolded = [ "Popup" ]

[node name="CenterContainer" type="CenterContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="TextureRect" type="TextureRect" parent="CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 768.0
margin_bottom = 612.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 282.0
margin_top = 171.0
margin_right = 485.0
margin_bottom = 441.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 10
alignment = 0
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="Tutorial" parent="CenterContainer/VBoxContainer" index="0" instance=ExtResource( 3 )]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 203.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
focus_mode = 0
enabled_focus_mode = 0
text = "Tutorial"

[node name="Easy" parent="CenterContainer/VBoxContainer" index="1" instance=ExtResource( 3 )]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 70.0
margin_right = 203.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 60 )
focus_mode = 0
enabled_focus_mode = 0
text = "Easy"

[node name="Medium" parent="CenterContainer/VBoxContainer" index="2" instance=ExtResource( 3 )]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 140.0
margin_right = 203.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 60 )
focus_mode = 0
enabled_focus_mode = 0
text = "Medium"

[node name="Hard" parent="CenterContainer/VBoxContainer" index="3" instance=ExtResource( 3 )]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 210.0
margin_right = 203.0
margin_bottom = 270.0
rect_min_size = Vector2( 0, 60 )
focus_mode = 0
enabled_focus_mode = 0
text = "Hard"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Tutorial" to="." method="_on_Tutorial_pressed"]

[connection signal="pressed" from="CenterContainer/VBoxContainer/Easy" to="." method="_on_Easy_pressed"]

[connection signal="pressed" from="CenterContainer/VBoxContainer/Medium" to="." method="_on_Medium_pressed"]

[connection signal="pressed" from="CenterContainer/VBoxContainer/Hard" to="." method="_on_Hard_pressed"]


